# src/api/gen/model/index.ts
@@ -107,6 +107,7 @@ export * from './updateQuizReqQuestionsItem.ts';
 export * from './updateTaskReq.ts';
 export * from './updateWorkspaceMemberReq.ts';
 export * from './updateWorkspaceReq.ts';
+export * from './updateWorkspaceSharingReq.ts';
 export * from './uRLResp.ts';
 export * from './user.ts';
 export * from './userColor.ts';
