# src/api/gen/model/updateWorkspaceReq.ts
@@ -4,8 +4,6 @@
  * Evo Notes API
  * OpenAPI spec version: 0.1.0
  */
-import type { Privacy } from './privacy.ts';
-import type { ShareRole } from './shareRole.ts';
 import type { TagInput } from './tagInput.ts';
 import type { UserColor } from './userColor.ts';
 
@@ -14,7 +12,5 @@ export interface UpdateWorkspaceReq {
   readonly $schema?: string;
   color?: UserColor;
   name?: string;
-  privacy?: Privacy;
-  shareRole?: ShareRole;
   tags?: TagInput[];
 }
